More github friendly ...

--- a/TestSpace.ipynb
+++ b/TestSpace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWgAAAEACAYAAACeQuziAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACmRJREFUeJzt3U+spXddx/HPtzM0pYBxgaFgm9SFJJqQtIE0xiJe/EMq\nQWSnJErCgpWGRgMxuBo2Ele4cAkYEFNNaEqsJIJAb5yGpFgyE/5MIZrQpGIpxCLaNCbUfl3MGedq\nZ+59bmfOfb4z9/XazDlznvucb55M3/nld85zW90dAOa5Ye0BALg0gQYYSqABhhJogKEEGmAogQYY\n6uSSg6rq8ST/keS/k/you+/a5lAALAx0kk6y091Pb3MYAC46zBZHbW0KAF5gaaA7yeer6tGqes82\nBwLgvKVbHHd395NV9RNJ/r6qvtndp7c5GMBxtyjQ3f3k5s/vV9UDSe5KcjpJqsov8wB4Ebp7363j\nAwNdVTcnOdHd/1lVL0vyliQfPMybHBenqvqUa5EkqapT3X1q7TkmcC0uci0uWrK4XbKCflWSB6rq\nwvF/2d2fu8LZADjAgYHu7m8nueMIZgFgD3cSXkU7aw8wy+7aAwyyu/YAg+yuPcC1pK70F/ZXVduD\n3qjquBbAAkvaaQUNMJRAAwwl0ABDCTTAUAINMJRAAwwl0ABDCTTAUAINMJRAAwwl0ABDCTTAUAIN\nMJRAAwwl0ABDCTTAUAINMJRAAwwl0ABDCTTAUAINMJRAAwwl0ABDCTTAUAINMJRAAwwl0ABDCTTA\nUAINMJRAAwwl0ABDCTTAUAINMJRAAwy1KNBVdaKqzlTVg9seCIDzlq6g701yLklvcRYA9jgw0FV1\na5K3JvlIktr6RAAkWbaC/nCS9yd5fsuzALDHyf1erKq3Jfled5+pqp19jju15+lud+9elekArhOb\nhu4c6me6L7+tXFV/nOR3kjyX5KYkP5bk/u5+155jurttfSRJVce1ABZY0s59A/3/TvaLSd7X3b9+\n2Dc5NgQaWGhJOw/7PWjf4gA4IotX0Jc9gRX0RVbQwELbWEEDcEQEGmAogQYYSqABhhJogKEEGmAo\ngQYYSqABhhJogKEEGmAogQYYSqABhhJogKEEGmAogQYYSqABhhJogKEEGmAogQYYSqABhhJogKEE\nGmAogQYYSqABhhJogKEEGmAogQYYSqABhhJogKEEGmAogQYYSqABhhJogKEEGmAogQYY6sBAV9VN\nVfVIVZ2tqnNV9aGjGAzguDt50AHd/V9V9ebufraqTiZ5uKre2N0PH8F8AMfWoi2O7n528/DGJCeS\nPL21iQBIsjDQVXVDVZ1N8lSSh7r73HbHAmDpCvr57r4jya1J3lRVO1udCoCD96D36u4fVtVnkrwh\nye6Fv6+qU3sO2+3u3QDwvzYL251D/Ux3H3TSVyZ5rrv/vapemuSzST7Y3V/YvN7dXS9q4utNVce1\nABZY0s4lK+hXJ/l4Vd2Q81sif3EhzgBsz4Er6ANPYAV9kRU0sNCSdrqTEGAogQYYSqABhhJogKEE\nGmAogQYYSqABhhJogKEEGmAogQYYSqABhhJogKEEGmAogQYYSqABhhJogKEEGmAogQYYSqABhhJo\ngKEEGmAogQYYSqABhhJogKEEGmAogQYYSqABhhJogKEEGmAogQYYSqABhhJogKEEGmAogQYYSqAB\nhhJogKEODHRV3VZVD1XVN6rq61X13qMYDOC4q+7e/4CqW5Lc0t1nq+rlSb6S5B3d/djm9e7u2v6o\n14CqjmsBLLCknQeuoLv7u919dvP4mSSPJXnN1RkRgMs51B50Vd2e5M4kj2xjGAAuWhzozfbGp5Lc\nu1lJA7BFJ5ccVFUvSXJ/kk9296cv8fqpPU93u3v3qkwHcJ2oqp0kO4f6mQUfElaSjyf5t+7+/Uu8\n7kPCC3xICCy0pJ1LAv3GJP+Q5KtJLhz8ge7+u6VvcmwINLDQVQn01XiTY0OggYWuytfsAFiHQAMM\nJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTCU\nQAMMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFAC\nDTCUQAMMJdAAQwk0wFAHBrqqPlZVT1XV145iIADOW7KC/vMk92x7EAD+rwMD3d2nk/zgCGYBYA97\n0ABDnbwaJ6mqU3ue7nb37tU4L8D1oqp2kuwc6me6e8mJb0/yYHe/7hKvdXfXYd70ulXVcS2ABZa0\n0xYHwFBLvmZ3X5IvJXltVT1RVe/e/lgALNri2PcEtjgussUBLGSLA+AaJtAAQwk0wFACDTCUQAMM\nJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTCU\nQAMMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFAH\nBrqq7qmqb1bVP1XVHx7FUAAcEOiqOpHkz5Lck+Rnk7yzqn7mKAa7Fu2uPcAgVbWz9gxTuBYXuRaH\nc9AK+q4k/9zdj3f3j5L8VZLf2P5Y16bdtQeYZWftAQbZWXuAQXbWHuBaclCgfzLJE3ue/8vm7wDY\nsoMC3UcyBQAvUN2Xb3BV/VySU919z+b5B5I8391/sucYEQd4Ebq79nv9oECfTPKtJL+c5F+TfDnJ\nO7v7sas5JAAvdHK/F7v7uar6vSSfTXIiyUfFGeBo7LuCBmA9V3QnoZtYzquqj1XVU1X1tbVnWVtV\n3VZVD1XVN6rq61X13rVnWktV3VRVj1TV2ao6V1UfWnumtVXViao6U1UPrj3Lmqrq8ar66uZafPmy\nx73YFfTmJpZvJfmVJN9J8o85pvvTVfULSZ5J8onuft3a86ypqm5Jckt3n62qlyf5SpJ3HMd/F0lS\nVTd397Obz3MeTvK+7n547bnWUlV/kOT1SV7R3W9fe561VNW3k7y+u5/e77grWUG7iWWju08n+cHa\nc0zQ3d/t7rObx88keSzJa9adaj3d/ezm4Y05/znOvv9BXs+q6tYkb03ykST7fnvhmDjwGlxJoN3E\nwr6q6vYkdyZ5ZN1J1lNVN1TV2SRPJXmou8+tPdOKPpzk/UmeX3uQATrJ56vq0ap6z+UOupJA+3SR\ny9psb3wqyb2blfSx1N3Pd/cdSW5N8qbj+rsoquptSb7X3Wdi9Zwkd3f3nUl+LcnvbrZJX+BKAv2d\nJLfteX5bzq+iOeaq6iVJ7k/yye7+9NrzTNDdP0zymSRvWHuWlfx8krdv9l7vS/JLVfWJlWdaTXc/\nufnz+0keyPkt4xe4kkA/muSnq+r2qroxyW8m+ZsrOB/XgaqqJB9Ncq67/3TtedZUVa+sqh/fPH5p\nkl9NcmbdqdbR3X/U3bd1908l+a0kX+zud6091xqq6uaqesXm8cuSvCXJJb8B9qID3d3PJblwE8u5\nJH99jD+pvy/Jl5K8tqqeqKp3rz3Tiu5O8ttJ3rz5CtGZqrpn7aFW8uokX9zsQT+S5MHu/sLKM01x\nnLdIX5Xk9J5/F3/b3Z+71IFuVAEYyv/yCmAogQYYSqABhhJogKEEGmAogQYYSqABhhJogKH+B+7V\np4ASGfjMAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWgAAAEACAYAAACeQuziAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACoZJREFUeJzt3U+o5Xd5x/HPk4whRlO6sBhtAumiQgtCghJKY+2xfyQV\na921Qiu4cNViaFGK3eR2U+nKLrpUi9aSFgyRpkK1ag6dIMRGZjA6UVowkNoYpbGWEAqm83QxZzLT\nZOaeM5m59/dk7usFlzl3zvf+5uHHzJsv33NOUt0dAOa5ZukBALgwgQYYSqABhhJogKEEGmAogQYY\n6tgui6rq8ST/neR/k/y4u+84yKEA2DHQSTrJqrufPshhADjnUo446sCmAOBFdg10J/liVT1SVe8/\nyIEAOGPXI447u/vJqvqpJP9UVd/q7uMHORjAUbdToLv7yc2vP6iq+5PckeR4klSV/5gHwEvQ3fse\nHW894qiqG6rqxs3jVyV5e5JHX/CH+OrOPe7FuXtxzz2LzzDly71wLy70tYtddtCvTXJ/VZ1d/zfd\n/YWdrg7AS7Y10N39nSS3HcIsAJzHJwmvoNXSAwyyWq2WHmEM9+Ic9+LS1K5nIRe9QFVf7jWuGlWJ\newHsoKrSl/siIQDLEGiAoQQaYCiBBhhKoAGGEmiAoQQaYCiBBhhKoAGGEmiAoQQaYCiBBhhKoAGG\nEmiAoQQaYCiBBhhKoAGGEmiAoQQaYCiBBhhKoAGGEmiAoQQaYCiBBhhKoAGGEmiAoQQaYCiBBhhK\noAGGEmiAoQQaYCiBBhhKoAGGEmiAoXYKdFVdW1UnquqBgx4IgDN23UHfneRUkj7AWQA4z9ZAV9XN\nSd6R5GNJ6sAnAiDJbjvojyb5UJLTBzwLAOc5tt+TVfXOJN/v7hNVtbrYur29vecfr1arrFYXXQpw\nJK3X66zX60v6meq++LFyVf1Zkt9L8lyS65P8RJL7uvu9563p/a5xpFQl7gWwg6pKd+97bLxvoF9w\nsV9O8sHu/s0X/L5AnyXQwI52CfSlvg9afQAOyc476ItewA76HDtoYEcHsYMG4JAINMBQAg0wlEAD\nDCXQAEMJNMBQAg0wlEADDCXQAEMJNMBQAg0wlEADDCXQAEMJNMBQAg0wlEADDCXQAEMJNMBQAg0w\nlEADDCXQAEMJNMBQAg0wlEADDCXQAEMJNMBQAg0wlEADDCXQAEMJNMBQAg0wlEADDCXQAEMJNMBQ\nAg0w1NZAV9X1VfVwVZ2sqlNV9ZHDGAzgqDu2bUF3/09Vva27n62qY0keqqq3dPdDhzAfwJG10xFH\ndz+7eXhdkmuTPH1gEwGQZMdAV9U1VXUyyVNJHuzuUwc7FgC77qBPd/dtSW5O8taqWh3oVABsP4M+\nX3f/qKo+l+TNSdZnf39vb+/5NavVKqvV6spMB3CVWK/XWa/Xl/Qz1d37L6h6TZLnuvu/quqVST6f\n5E+7+0ub53vbNY6MqsS9AHZQVenu2m/NLjvo1yX5ZFVdkzNHIn99Ns4AHJytO+itF7CDPscOGtjR\nLjtonyQEGEqgAYYSaIChBBpgKIEGGEqgAYYSaIChBBpgKIEGGEqgAYYSaIChBBpgKIEGGEqgAYYS\naIChBBpgKIEGGEqgAYYSaIChBBpgKIEGGEqgAYYSaIChBBpgKIEGGEqgAYYSaIChBBpgKIEGGEqg\nAYYSaIChBBpgKIEGGEqgAYYSaIChBBpgqK2BrqpbqurBqvpmVX2jqj5wGIMBHHXV3fsvqLopyU3d\nfbKqXp3ka0ne3d2PbZ7vbdc4MqoS9wLYQVWlu2u/NVt30N39ve4+uXn8TJLHkrz+yowIwMVc0hl0\nVd2a5PYkDx/EMACcs3OgN8cbn0ly92YnDcABOrbLoqp6RZL7kny6uz/7wuf39vaef7xarbJara7Q\neABXh/V6nfV6fUk/s8uLhJXkk0n+s7v/8ALPe5HwLC8SAjva5UXCXQL9liT/nOTrSc4u/nB3/+Pm\neYE+S6CBHV2RQO/whwj0WQIN7OiKvM0OgGUINMBQAg0wlEADDCXQAEMJNMBQAg0wlEADDCXQAEMJ\nNMBQAg0wlEADDCXQAEMJNMBQAg0wlEADDCXQAEMJNMBQAg0wlEADDCXQAEMJNMBQAg0wlEADDCXQ\nAEMJNMBQAg0wlEADDCXQAEMJNMBQAg0wlEADDCXQAEMJNMBQAg0wlEADDLU10FX1iap6qqoePYyB\nADhjlx30XyW566AHAeD/2xro7j6e5IeHMAsA53EGDTDUsStxkb29vecfr1arrFarK3FZgKvGer3O\ner2+pJ+p7t6+qOrWJA909xsv8Fzvco0joSpxL4AdVFW6u/Zb44gDYKhd3mZ3b5KvJHlDVT1RVe87\n+LEA2OmIY98LOOI4xxEHsCNHHAAvYwINMJRAAwwl0ABDCTTAUAINMJRAAwwl0ABDCTTAUAINMJRA\nAwwl0ABDCTTAUAINMJRAAwwl0ABDCTTAUAINMJRAAwwl0ABDCTTAUAINMJRAAwwl0ABDCTTAUAIN\nMJRAAwwl0ABDCTTAUAINMJRAAwwl0ABDCTTAUAINMJRAAwy1NdBVdVdVfauq/rWq/vgwhgJgS6Cr\n6tokf5nkriQ/n+Q9VfVzhzHYy9F66QEGWa/XS48whntxjntxabbtoO9I8m/d/Xh3/zjJ3yb5rYMf\n6+VpvfQAg/iHeI57cY57cWm2Bfqnkzxx3vf/vvk9AA7YtkD3oUwBwItU98UbXFW/kGSvu+/afP/h\nJKe7+8/PWyPiAC9Bd9d+z28L9LEk307yq0n+I8lXk7ynux+7kkMC8GLH9nuyu5+rqj9I8vkk1yb5\nuDgDHI59d9AALOeyPknoQyxnVNUnquqpqnp06VmWVlW3VNWDVfXNqvpGVX1g6ZmWUlXXV9XDVXWy\nqk5V1UeWnmlpVXVtVZ2oqgeWnmVJVfV4VX19cy++etF1L3UHvfkQy7eT/FqS7yb5lxzR8+mq+qUk\nzyT5VHe/cel5llRVNyW5qbtPVtWrk3wtybuP4t+LJKmqG7r72c3rOQ8l+WB3P7T0XEupqj9K8qYk\nN3b3u5aeZylV9Z0kb+rup/dbdzk7aB9i2eju40l+uPQcE3T397r75ObxM0keS/L6ZadaTnc/u3l4\nXc68jrPvP8irWVXdnOQdST6WZN93LxwRW+/B5QTah1jYV1XdmuT2JA8vO8lyquqaqjqZ5KkkD3b3\nqaVnWtBHk3woyemlBxmgk3yxqh6pqvdfbNHlBNqri1zU5njjM0nu3uykj6TuPt3dtyW5Oclbq2q1\n8EiLqKp3Jvl+d5+I3XOS3Nndtyf5jSS/vzkmfZHLCfR3k9xy3ve35MwumiOuql6R5L4kn+7uzy49\nzwTd/aMkn0vy5qVnWcgvJnnX5uz13iS/UlWfWnimxXT3k5tff5Dk/pw5Mn6Rywn0I0l+tqpurarr\nkvx2kr+/jOtxFaiqSvLxJKe6+y+WnmdJVfWaqvrJzeNXJvn1JCeWnWoZ3f0n3X1Ld/9Mkt9J8uXu\nfu/Scy2hqm6oqhs3j1+V5O1JLvgOsJcc6O5+LsnZD7GcSvJ3R/iV+nuTfCXJG6rqiap639IzLejO\nJL+b5G2btxCdqKq7lh5qIa9L8uXNGfTDSR7o7i8tPNMUR/mI9LVJjp/39+IfuvsLF1rogyoAQ/lf\nXgEMJdAAQwk0wFACDTCUQAMMJdAAQwk0wFACDTDU/wFg2mss7IXrQQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x111d3b550>"
+       "<matplotlib.figure.Figure at 0x110bf54e0>"
       ]
      },
      "metadata": {},
@@ -38,12 +38,9 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.plot([1,1], [0,5], 'r-')\n",
-    "plt.axis([0, 5, 0, 5])\n",
-    "plt.show()"
+    "pylab.plot([1,1], [0,5], 'r-')\n",
+    "pylab.axis([0, 5, 0, 5])\n",
+    "pylab.show()"
    ]
   },
   {
@@ -72,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
