--- a/Exponentialfunktion.ipynb
+++ b/Exponentialfunktion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -31,10 +31,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x10fd28940>]"
+       "[<matplotlib.lines.Line2D at 0x10d13c240>]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -42,7 +42,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXsAAAEACAYAAABS29YJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFQRJREFUeJzt3X+MXWed3/H3J/bGE9oEFrGCJLZEOjUSrqDQULxlaZjQ\n2nHjNIlUVQlSw3Yb7Yq6HVvaJVsSE+JU6wBtBY2tkn8oCqHCbdRlUdLJJg6EwYtaYmCdxWBS4tEm\nWlsNYQVsuqLjteNv/7jH9rUZz4/4x73j5/2SRj73e57j+z1X1sePnnPumVQVkqQL20WDbkCSdO4Z\n9pLUAMNekhpg2EtSAwx7SWqAYS9JDZhX2CdZkmRPkkf7auNJfpDke0k+2Ve/M8lzSZ5NsravfnWS\nvd2++8/uaUiSZrN0nuM2AfuASwGSXAvcCLy9qg4n+ZWuvgq4BVgFXAl8JcnK6t3M/wBwe1XtTvJY\nknVV9fhZPh9J0gzmnNknWQ5cD3wWSFf+l8DHq+owQFX9uKvfBOyoqsNV9TywH1id5HLg0qra3Y17\nCLj5rJ2FJGlW81nG+TRwB3C0r7YSuCbJN5NMJnlXV78CONA37gC9Gf6p9YNdXZJ0Hswa9kluAF6q\nqj2cmNVDb/nnl6vqV+n9R/DwuWtRknSm5lqzfw9wY5LrgRHgsiRfoDdL/xJAVX0rydEkb6A3Y1/R\nd/zybuzBbru/fnCmN0ziw3okaYGqKrPtn3VmX1V3VdWKqroKuBV4qqpuA74MvB8gyVuAi6vqz4FH\ngFuTXJzkKnrLPbur6kXg5SSrkwQ49nec7n2b/7nnnnsG3sOw/PhZ+Fn4Wcz+Mx/zvRvneA53f34O\n+FySvcBfAR/sQnpfkofp3blzBNhQJzrZADwIXAI8Vt6JI0nnzbzDvqq+Dny92z5Mb3Y+07j7gPtm\nqH8HeNura1OSdCb8Bu2QGhsbG3QLQ8PP4gQ/ixP8LBYm813vOV+S1LD1JEnDLAl1JhdoJUkXBsNe\nkhpg2EtSAwx7SWqAYS9JDTDsJakBhr0kNcCwl6QGGPaS1ADDXpIaYNhLUgMMe0lqgGEvSYvUrokJ\nPnrddfMa61MvJWkR2jUxwRObNrF1aopwhr+WUJI0nHZu28bWqal5jzfsJWkRWnro0ILGG/aStAgd\nWbZsQeMNe0lahNZu3Mjm0dF5j5/3LxyXJA2Pa9avB+Du7dvhiSfmHO/dOJK0yPk7aCVJgGEvSU0w\n7CWpAYa9JDXAsJekBhj2ktSAeYV9kiVJ9iR59JT67yQ5muT1fbU7kzyX5Nkka/vqVyfZ2+27/+yd\ngiRpLvOd2W8C9gHHb4BPsgJYA7zQV1sF3AKsAtYBn0ly7N7PB4Dbq2olsDLJujNvX5I0H3OGfZLl\nwPXAZ4H+m/Y/BfzuKcNvAnZU1eGqeh7YD6xOcjlwaVXt7sY9BNx8hr1LkuZpPjP7TwN3AEePFZLc\nBByoqu+eMvYK4EDf6wPAlTPUD3Z1SdJ5MGvYJ7kBeKmq9tDN6pO8BrgLuKd/6DnrUJJ0xuZ6ENp7\ngBuTXA+MAJfRW4J5M/An3XL8cuA7SVbTm7Gv6Dt+Ob0Z/cFuu79+8HRvumXLluPbY2NjjI2Nzedc\nJKkJk5OTTE5OLuiYeT8ILcn7gA9X1T8+pf6nwNVV9ZPuAu0XgXfTW6b5CvA3q6qSPA1sBHYDE8C2\nqnp8hvfxQWiStADzeRDaQh9xPFMKH69V1b4kD9O7c+cIsKEvuTcADwKXAI/NFPSSpHPDRxxL0iLn\nI44lSYBhL0lNMOwlqQGGvSQ1wLCXpAYY9pLUAMNekhpg2EtSAwx7SWqAYS9JDTDsJakBhr0kNcCw\nl6QGGPaS1ADDXpIaYNhLUgMMe0lqgGEvSQ0w7CWpAYa9JDXAsJekBhj2ktQAw16SGmDYS1IDDHtJ\nasDSQTcgSQuxa2KCndu2sfTQIY4sW8bajRu5Zv36Qbc19Ax7SYvGrokJnti0ia1TU8drm7ttA392\nLuNIWjR2btt2UtADbJ2a4snt2wfU0eJh2EtaNJYeOjRjfcn09HnuZPGZV9gnWZJkT5JHu9f/PskP\nkvxJki8leW3f2DuTPJfk2SRr++pXJ9nb7bv/7J+KpAvdkWXLZqy/MjJynjtZfOY7s98E7AOqe70T\n+FtV9beBHwJ3AiRZBdwCrALWAZ9Jku6YB4Dbq2olsDLJurNzCpJasXbjRjaPjp5Uu2t0lDXj4wPq\naPGY8wJtkuXA9cBW4LcBqurJviFPA/+k274J2FFVh4Hnk+wHVid5Abi0qnZ34x4CbgYePytnIakJ\nxy7C3r19O0ump3llZIR14+NenJ2H+dyN82ngDuCy0+z/F8CObvsK4Jt9+w4AVwKHu+1jDnZ1SVqQ\na9avN9xfhVnDPskNwEtVtSfJ2Az7NwN/VVVfPJtNbdmy5fj22NgYY2O/8NaS1KzJyUkmJycXdEyq\n6vQ7k/uA24AjwAi92f3vV9UHk/xz4DeBf1BV0934jwBU1Se6148D9wAvAF+rqrd29Q8A76uqD83w\nnjVbT5KkkyWhqjLbmFkv0FbVXVW1oqquAm4FnuqCfh29pZ2bjgV95xHg1iQXJ7kKWAnsrqoXgZeT\nrO4u2N4GfPkMzk2StAAL+QZtOHE3znbgYuDJ7mab/1VVG6pqX5KH6d25cwTY0DdN3wA8CFwCPFZV\nXpyVpPNk1mWcQXAZR5IW5oyXcSRJFwbDXpIaYNhLUgMMe0lqgGEvSQ0w7CWpAYa9JDXAsJekBhj2\nktQAw16SGmDYS1IDDHtJaoBhL0kNMOwlqQGGvSQ1wLCXpAYY9pLUAMNekhpg2EtSAwx7SWqAYS9J\nDTDsJakBhr0kNcCwl6QGGPaS1ADDXpIaYNhLUgMMe0lqwLzCPsmSJHuSPNq9fn2SJ5P8MMnOJK/r\nG3tnkueSPJtkbV/96iR7u333n/1TkSSdznxn9puAfUB1rz8CPFlVbwG+2r0mySrgFmAVsA74TJJ0\nxzwA3F5VK4GVSdadnVOQJM1lzrBPshy4HvgscCy4bwQ+321/Hri5274J2FFVh6vqeWA/sDrJ5cCl\nVbW7G/dQ3zGS5rBrYoKPXncdW8bG+Oh117FrYmLQLWmRWTqPMZ8G7gAu66u9sap+1G3/CHhjt30F\n8M2+cQeAK4HD3fYxB7u6pDnsmpjgiU2b2Do1dby2udu+Zv36QbWlRWbWsE9yA/BSVe1JMjbTmKqq\nJDXTvldry5Ytx7fHxsYYG5vxraUm7Ny27aSgB9g6NcXd27cb9o2anJxkcnJyQcfMNbN/D3BjkuuB\nEeCyJF8AfpTkTVX1YrdE81I3/iCwou/45fRm9Ae77f76wdO9aX/YS61beujQjPUl09PnuRMNi1Mn\nwffee++cx8y6Zl9Vd1XViqq6CrgVeKqqbgMeAX69G/brwJe77UeAW5NcnOQqYCWwu6peBF5Osrq7\nYHtb3zGSZnFk2bIZ66+MjJznTrSYLfQ++2PLNZ8A1iT5IfD+7jVVtQ94mN6dO38IbKiqY8dsoHeR\n9zlgf1U9foa9S01Yu3Ejm0dHT6rdNTrKmvHxAXWkxSgnsng4JKlh60katF0TEzy5fTtLpqd5ZWSE\nNePjrtfruCRUVWYdM2zBathL0sLMJ+x9XIIkNcCwl6QGGPaS1ADDXpIaYNhLUgMMe0lqgGEvSQ0w\n7CWpAYa9JDXAsJekBhj2ktQAw16SGmDYS1IDDHtJaoBhL0kNMOwlqQGGvSQ1wLCXpAYY9pLUAMNe\nkhpg2EtSAwx7SWqAYS9JDTDsJakBhr0kNcCwl6QGGPaS1IBZwz7JSJKnkzyTZF+Sj3f1dyfZnWRP\nkm8l+bt9x9yZ5LkkzyZZ21e/Osnebt/95+6UJEmnmjXsq2oauLaq3gG8Hbg2yXuBTwJ3V9U7gY8B\n/w4gySrgFmAVsA74TJJ0f90DwO1VtRJYmWTduTghSdIvmnMZp6p+3m1eDCwBfgq8CLy2q78OONht\n3wTsqKrDVfU8sB9YneRy4NKq2t2Newi4+aycgSRpTkvnGpDkIuCPgVHggar6fpKPAN9I8h/o/Yfx\n97rhVwDf7Dv8AHAlcLjbPuZgV5cknQdzhn1VHQXekeS1wBNJxoCPAhur6g+S/FPgc8Cas9XUli1b\njm+PjY0xNjZ2tv5qSVr0JicnmZycXNAxqar5D07uBv4f8LGquqyrBfhZVb22m/FTVZ/o9j0O3AO8\nAHytqt7a1T8AvK+qPjTDe9RCetKFa9fEBDu3bWPpoUMcWbaMtRs3cs369YNuSxo6SaiqzDZm1pl9\nkjcAR6rqZ0kuoTd7/7fA/iTvq6qvA+8Hftgd8gjwxSSfordMsxLYXVWV5OUkq4HdwG3AtjM5OV3Y\ndk1M8MSmTWydmjpe29xtG/jSws21jHM58Plu3f4i4AtV9ZUkvwX8pyTL6M30fwugqvYleRjYBxwB\nNvRN0zcADwKXAI9V1eNn/Wx0wdi5bdtJQQ+wdWqKu7dvN+ylV2HWsK+qvcDfmaH+bWD1aY65D7hv\nhvp3gLe9ujbVmqWHDs1YXzI9fZ47kS4MfoNWQ+nIsmUz1l8ZGTnPnUgXBsNeQ2ntxo1sHh09qXbX\n6ChrxscH1JG0uC3obpzzwbtxdMyuiQme3L6dJdPTvDIywprxcdfrpRnM524cw16SFrn5hL3LOJLU\nAMNekhpg2EtSAwx7SWqAYS9JDTDsJakBhr0kNcCwl6QGGPaS1ADDXpIaYNhLUgMMe0lqgGEvSQ0w\n7CWpAYa9JDXAsJekBhj2ktQAw16SGmDYS1IDDHtJaoBhL0kNMOwlqQGGvSQ1wLCXpAbMGvZJRpI8\nneSZJPuSfLxv33iSHyT5XpJP9tXvTPJckmeTrO2rX51kb7fv/nNzOpKkmSydbWdVTSe5tqp+nmQp\n8I0k7wV+CbgReHtVHU7yKwBJVgG3AKuAK4GvJFlZVQU8ANxeVbuTPJZkXVU9fi5PTpLUM2vYA1TV\nz7vNi4ElwE+BjwEfr6rD3Zgfd2NuAnZ09eeT7AdWJ3kBuLSqdnfjHgJuBgz7U+yamGDntm0sPXSI\nI8uWsXbjRq5Zv37QbUla5OYM+yQXAX8MjAIPVNX3k7wFuCbJfcA08OGq+jZwBfDNvsMP0JvhH+62\njznY1dVn18QET2zaxNapqeO1zd22gS/pTMx5gbaqjlbVO4Dl9AJ+jN5/Er9cVb8K3AE8fE67bMTO\nbdtOCnqArVNTPLl9+4A6knShmHNmf0xV/UWSCeBd9GbpX+rq30pyNMkb6M3YV/Qdtrwbe7Db7q8f\nPN17bdmy5fj22NgYY2Nj821zUVt66NCM9SXT0+e5E0nDbHJyksnJyQUdM2vYdwF+pKp+luQSYA1w\nL/B/gfcDX++WdC6uqj9P8gjwxSSfordMsxLYXVWV5OUkq4HdwG3AttO9b3/Yt+TIsmUz1l8ZGTnP\nnUgaZqdOgu+99945j5lrGedy4KkkzwBPA49W1VeBzwF/I8leYAfwQYCq2kdvSWcf8IfAhu5OHIAN\nwGeB54D93onzi9Zu3Mjm0dGTaneNjrJmfHxAHUm6UOREFg+HJDVsPZ1PuyYmeHL7dpZMT/PKyAhr\nxse9OCtpVkmoqsw6ZtiCtfWwl6SFmk/Y+7gESWqAYS9JDTDsJakBhr0kNcCwl6QGGPaS1ADDXpIa\nYNhLUgMMe0lqgGEvSQ0w7CWpAYa9JDXAsJekBhj2ktQAw16SGmDYS1IDDHtJasBQhv1Hr7uOXRMT\ng25Dki4YSwfdwEx+b+dONk9NAfj7VyXpLBjKmT3A1qkpnty+fdBtSNIFYWjDHmDJ9PSgW5CkC8JQ\nh/0rIyODbkGSLghDG/Z3jY6yZnx80G1I0gVhKC/Q3n3ddawbH/firCSdJamqQfdwkiQ1bD1J0jBL\nQlVltjFDu4wjSTp7DHtJasCsYZ9kJMnTSZ5Jsi/Jx0/Z/ztJjiZ5fV/tziTPJXk2ydq++tVJ9nb7\n7j/7pyJJOp1Zw76qpoFrq+odwNuBa5O8FyDJCmAN8MKx8UlWAbcAq4B1wGeSHFtHegC4vapWAiuT\nrDvbJ3MhmZycHHQLQ8PP4gQ/ixP8LBZmzmWcqvp5t3kxsAT4Sff6U8DvnjL8JmBHVR2uqueB/cDq\nJJcDl1bV7m7cQ8DNZ9j7Bc1/yCf4WZzgZ3GCn8XCzBn2SS5K8gzwI+BrVbUvyU3Agar67inDrwAO\n9L0+AFw5Q/1gV5cknQdz3mdfVUeBdyR5LfBEkuuBO4G1fcNmveVHkjRYC7rPPsndQAHjwLHlneX0\nZuqrgd8AqKpPdOMfB+6ht67/tap6a1f/APC+qvrQDO/hTfaStEBz3Wc/68w+yRuAI1X1sySX0Lsg\ne29V/V7fmD8Frq6qnyR5BPhikk/RW6ZZCeyuqkrycpLVwG7gNmDbq2lYkrRwcy3jXA58PslF9Nb3\nv1BVXz1lzPGZeLee/zCwDzgCbOj7OuwG4EHgEuCxqnr8LPQvSZqHoXtcgiTp7Buab9AmWdd9Eeu5\nJP9m0P0MSpLPJflRkr2D7mXQkqxI8rUk30/yvSQbB93ToMz1BccWJVmSZE+SRwfdyyAleT7Jd7vP\nYvdpxw3DzD7JEuB/A/+Q3sXebwEfqKofDLSxAUjy94G/BB6qqrcNup9BSvIm4E1V9UySvw58B7i5\nxX8XAEleU1U/T7IU+Abw4ar6xqD7GpQkvw1cTe87PDcOup9B6b9uOtu4YZnZvxvYX1XPV9Vh4L/S\n+4JWc6rqj4CfDrqPYVBVL1bVM932XwI/oPedjSbN8gXH5iRZDlwPfBZv/YZ5fAbDEvZXAn/W9/rY\nl7EkAJK8GXgn8PRgOxmcmb7gOOieBujTwB3A0UE3MgQK+EqSbyf5zdMNGpawH/xakoZWt4Tz34FN\n3Qy/SVV1tHtO1XLgmiRjA25pIJLcALxUVXtwVg/wa1X1TuAfAf+qWwr+BcMS9geBFX2vV3Dy4xXU\nqCS/BPw+8F+q6suD7mcYVNVfABPAuwbdy4C8B7ixW6veAbw/yUMD7mlgqur/dH/+GPgDesviv2BY\nwv7b9J6E+eYkF9N7cuYjA+5JA9Y9MfU/A/uq6j8Oup9BSvKGJK/rto99wXHPYLsajKq6q6pWVNVV\nwK3AU1X1wUH3NQhJXpPk0m77r9F7jM2Md/INRdhX1RHgXwNP0PtC1n9r+I6LHcD/BN6S5M+S/Mag\nexqgXwP+Gb1Ha+/pflp9NPblwFPdmv3TwKMzfMGxVS0vA78R+KO+fxf/o6p2zjRwKG69lCSdW0Mx\ns5cknVuGvSQ1wLCXpAYY9pLUAMNekhpg2EtSAwx7SWqAYS9JDfj/iHw03ofW85EAAAAASUVORK5C\nYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10fbda3c8>"
+       "<matplotlib.figure.Figure at 0x10d0c1828>"
       ]
      },
      "metadata": {},
@@ -70,12 +70,12 @@
     "collapsed": true
    },
    "source": [
-    "Die natürliche Expotentialfunktion ist $f(t) = f(0) \\cdot e^{k \\cdot t}$ mit Anfangswert $f(0)$, Wachstumswert $a$ und  Wachstumskonstante $k = ln(a)$."
+    "Die natürliche Expotentialfunktion ist $f(t) = f(0) \\cdot e^{k \\cdot t}$ mit Anfangswert $f(0)$, Wachstumsquotient $a$ und  Wachstumskonstante $k = ln(a)$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
        "5      4483"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +158,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Time</th>\n",
        "      <th>Value</th>\n",
-       "      <th>Wachstumswert</th>\n",
+       "      <th>Wachstumsquotienten</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -197,7 +197,7 @@
        "</div>"
       ],
       "text/plain": [
-       "Time  Value          Wachstumswert\n",
+       "Time  Value    Wachstumsquotienten\n",
        "0      3464                      -\n",
        "1      3599  3599/3464=1.038972286\n",
        "2      3780  3780/3599=1.050291748\n",
@@ -206,13 +206,13 @@
        "5      4483  4483/4225=1.061065089"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Wachstumswert'] = pd.Series(['-',\n",
+    "df['Wachstumsquotienten'] = pd.Series(['-',\n",
     "                                 '3599/3464=1.038972286',\n",
     "                                 '3780/3599=1.050291748',\n",
     "                                 '3997/3780=1.057407407',\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -241,7 +241,7 @@
        "1.0529558624"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +271,7 @@
        "0.05160131622395353"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,15 +367,6 @@
     "t = np.arange(0, 200, 1)\n",
     "pylab.plot(t, 3464*np.exp(k*t), label=r'$f(t) = 3464 \\cdot e^{0.05160131622395353 \\cdot t}$')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
